Fixed slider layout collapsing on mobile.

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -20,6 +20,7 @@ $color-secondary: #c4c4c4;
   &--slider,
   &--product-variation-slider,
   &--grid {
+    width: 100%;
 
     > ul {
       &:after {
